working on header and nav bar

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,12 @@
       </nav>
     </section>
 
+    <section>
+      <h2>Canine Liability Insurance</h2>
+      <h4>Price Varies</h4>
+      <p>In contrast to other programs, Canine Liability insurance does not exclude any particular breed of dog; each dog is individually underwritten regarding characteristics that play a part in dog biting.</p>
+    </section>
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
