added some style

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,10 @@
       </nav>
     </section>
 
-    <section>
+    <div id="left"></div>
+    <div id="right"></div>
+
+    <section id='about'>
       <h2>Canine Liability Insurance</h2>
       <h4>Price Varies</h4>
       <p>In contrast to other programs, Canine Liability insurance does not exclude any particular breed of dog; each dog is individually underwritten regarding characteristics that play a part in dog biting.</p>
