--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,10 @@
       <p>In contrast to other programs, Canine Liability insurance does not exclude any particular breed of dog; each dog is individually underwritten regarding characteristics that play a part in dog biting.</p>
     </section>
 
+    <footer>
+      
+    </footer>
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
