working on footer

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,26 @@
     </section>
 
     <footer>
-      
+      <div class="container">
+        <h5>QUICK CONTACT</h5>
+        <address>
+          <strong>Dean Insurance Agency</strong> <br>
+          230 N Westmonte Drive <br>
+          Suite 2100 <br>
+          Altamonte Springs, FL 32714 <br>
+          Phone: 800.721.3326 or <br>
+          407.865.7477, ext 101 <br>
+          Fax: 407.865.7557
+        </address>
+        <ul class='social'>
+          <li><a href="https://www.facbook.com/dogbitequote" class='fa fa-facebook-official' target='_blank'></a></li>
+          <li><a href="https://plus.google.com/dogbitequote" class='fa fa-google-plus' target='_blank'></a></li>
+          <li><a href="https://www.linkedin.com/company/2751504?trk=tyah" class='fa fa-linkedin' target='_blank'></a></li>
+          <li><a href="https://www.twitter.com/dogbitequote" class='fa fa-twitter' target='_blank'></a></li>
+          <li><a href="https://woutube.com/userInsuredDogOwners" class='fa fa-youtube-play' target='_blank'></a></li>
+        </ul>
+        <small>Copyright &copy;2017 Dean Insurance Agency</small>
+      </div>
     </footer>
 
 
