--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
         <button class='navbar-toggler navbar-toggler-right' type='button' data-toggle='collapse' data-target='#navbarNavAltAltMarkup' aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation'>
           <span class='navbar-toggler-icon'></span>
         </button>
-        <a href="#" class='navbar-brand'><img src="images/logo.png" alt=""></a>
+        <a href="#" class='navbar-brand'><img src="images/logo.jpg" alt=""></a>
         <div class="collapse navbar-collapse" id='navbarNavAltMarkup'>
           <div class="navbar-nav">
             <a href="#" class='nav-item nav-link active'>HOME <span class='sr-only'>(current)</span></a>
