--- a/app/index.html
+++ b/app/index.html
@@ -44,8 +44,8 @@
         <div class="collapse navbar-collapse" id='navbarNavAltMarkup'>
           <div class="navbar-nav">
             <a href="#" class='nav-item nav-link active'>HOME <span class='sr-only'>(current)</span></a>
-            <a href="#" class='nav-item nav-link'>BLOG</a>
-            <a href="#" class='nav-item nav-link'>ABOUT</a>
+            <a href="blog.html" class='nav-item nav-link'>BLOG</a>
+            <a href="about.html" class='nav-item nav-link'>ABOUT</a>
           </div>
         </div>
       </nav>
