setting up other pages

--- a/app/blog.html
+++ b/app/blog.html
@@ -75,5 +75,27 @@
         <small>Copyright &copy;2017 Dean Insurance Agency</small>
       </div>
     </footer>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+   <script>
+     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+     e.src='https://www.google-analytics.com/analytics.js';
+     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+     ga('create','UA-XXXXX-X');ga('send','pageview');
+   </script>
+
+   <script
+   src="http://code.jquery.com/jquery-3.2.1.min.js"
+   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+   crossorigin="anonymous"></script>
+   <script src='https://cdn.jsdelivr.net/tether/1.4.0/tether.min.js'></script>
+
+   <!-- build:js scripts/main.js -->
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+
+   <!-- endbuild -->
   </body>
 </html>
