--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,11 @@
 
     <section id='navBar'>
       <aside>
-        <a href="https://www.facebook.com/dogbitequote" class='fa fa-facebook-official'></a>
-        <a href="https://plus.google.com/u/0/+DogBiteQuote" class='fa fa-google-plus'></a>
-        <a href="https://linkedin.com/company/2751594?trk=tyah" class='fa fa-linkedin'></a>
-        <a href="https://twitter.com/dogbitequote" class='fa fa-twitter'></a>
-        <a href="https://youtub.com/user/insuredDogOwners" class='fa fa-youtube'></a>
+        <a href="https://www.facebook.com/dogbitequote" class='fa fa-facebook-official' target='_blank'></a>
+        <a href="https://plus.google.com/dogbitequote" class='fa fa-google-plus' target='_blank'></a>
+        <a href="https://linkedin.com/company/2751594?trk=tyah" class='fa fa-linkedin' target='_blank'></a>
+        <a href="https://twitter.com/dogbitequote" class='fa fa-twitter' target='_blank'></a>
+        <a href="https://youtub.com/user/insuredDogOwners" class='fa fa-youtube' target='_blank'></a>
       </aside>
       <nav class='navbar navbar-toggleable-md navbar-light bg-faded'>
         <button class='navbar-toggler navbar-toggler-right' type='button' data-toggle='collapse' data-target='#navbarNavAltAltMarkup' aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation'>
