--- a/app/about.html
+++ b/app/about.html
@@ -54,8 +54,8 @@
     <div id="right"></div>
 
     <section id='about'>
-      <h3>Team</h3>
-      <h5>Meet Deborah Turner</h5>
+
+      <h3>Meet Deborah Turner</h3>
       <img src="images/debbie.jpg" alt="" class='team'>
       <p>
         It's likely that the seed to become a champion for man's best friend was planted in Deborah Turner years ago when, as a child, she witnessed an act of animal abuse yet was powerless to stop it. Fast forward to today, when Debbie has parlayed her love of dogs, a deep understanding of their behavior, and a strong background in insurance to replace coverage that is being removed from homeowners and rental policies with Canine Liability Insurance.
@@ -63,8 +63,8 @@
       <p>
         While doing research for a paper for the prestigious Society of Chartered Property and Casualty Underwriters (aka CPCU), it occurred to her that there is a gross misunderstanding by the insurance indurstry as to which dogs to insure for dog bite liability. Finding taht breed is only one small part on the process, Debbie looked at developing a rating modality that incorporates identifiable factors as to the likelihood a dog will bite regardless of the breed. The most often question asked is will she insure one of the so-called dangerous breeds, and the answer is YES! The Canine Liability Policy is designed for any and ALL Breeds of dogs.
       </p>
-      <h5>Meet Bruce Fernandez</h5>
-      <img src="images/FernandezBruce.jpg" alt="" class='team'>
+      <h3>Meet Bruce Fernandez</h3>
+      <img src="images/FernandezBruce.jpg" alt="" class='team bruce'>
       <p>
         Mr. Fernandez is a principal of a Florida-based specialized business development firm G2G3. He spent fourteen of his twenty year insurance career in Chicago. While there, he served in the National Accounts Division of a major global insurance company, was a junior office of the Illinois office of a global brokerage firm, and served as Vice President of Marketing and Business Development for Calssic Syndicate, Classic Fire &amp; Marine Insurance Companyand their countywide corporate network of underwriting profit centers. During that time, he was active as a board director and officer of the Illinois Captive and Alternative Risk Funding Insurance Association. He holds a B.A. degree in Communications and Business Administration from Rollins College.
       </p>
