--- a/app/about.html
+++ b/app/about.html
@@ -30,7 +30,7 @@
     <section id='navBar'>
       <aside>
         <a href="https://www.facebook.com/dogbitequote" class='fa fa-facebook-official' target='_blank'></a>
-        <a href="https://plus.google.com/dogbitequote" class='fa fa-google-plus' target='_blank'></a>
+        <a href="https://plus.google.com/u/0/+DogBiteQuote" class='fa fa-google-plus' target='_blank'></a>
         <a href="https://www.linkedin.com/company/2751504?trk=tyah" target='_blank'></a>
         <a href="https://www.twitter.com/dogbitequote" class='fa fa-twitter' target='_blank'></a>
         <a href="https://www.youtube.com/user/InsuredDogOwners" class='fa fa-youtube-play' target='_blank'></a>
@@ -84,7 +84,7 @@
         </address>
         <ul class='social'>
           <li><a href="https://www.facebook.com/dogbitequote" class='fa fa-facebook-official' target='_blank'></a></li>
-          <li><a href="https://plus.google.com/dogbitequote" class='fa fa-google-plus' target='_blank'></a></li>
+          <li><a href="https://plus.google.com/u/0/+DogBiteQuote" class='fa fa-google-plus' target='_blank'></a></li>
           <li><a href="https://linkedin.com/company/2751504?trk=tyah" target='_blank' class='fa fa-linkedin'></a></li>
           <li><a href="https://www.twitter.com/dogbitequote" class='fa fa-twitter' target='_blank'></a></li>
           <li><a href="https://www.youtube.com/user/InsuredDogOwners" class='fa fa-youtube-play' target='_blank'></a></li>
