--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <section id='navBar'>
       <aside>
         <a href="https://www.facebook.com/dogbitequote" class='fa fa-facebook-official' target='_blank'></a>
-        <a href="https://plus.google.com/dogbitequote" class='fa fa-google-plus' target='_blank'></a>
+        <a href="https://plus.google.com/u/0/+DogBiteQuote" class='fa fa-google-plus' target='_blank'></a>
         <a href="https://linkedin.com/company/2751594?trk=tyah" class='fa fa-linkedin' target='_blank'></a>
         <a href="https://twitter.com/dogbitequote" class='fa fa-twitter' target='_blank'></a>
         <a href="https://youtub.com/user/insuredDogOwners" class='fa fa-youtube' target='_blank'></a>
@@ -74,7 +74,7 @@
         </address>
         <ul class='social'>
           <li><a href="https://www.facbook.com/dogbitequote" class='fa fa-facebook-official' target='_blank'></a></li>
-          <li><a href="https://plus.google.com/dogbitequote" class='fa fa-google-plus' target='_blank'></a></li>
+          <li><a href="https://plus.google.com/u/0/+DogBiteQuote" class='fa fa-google-plus' target='_blank'></a></li>
           <li><a href="https://www.linkedin.com/company/2751504?trk=tyah" class='fa fa-linkedin' target='_blank'></a></li>
           <li><a href="https://www.twitter.com/dogbitequote" class='fa fa-twitter' target='_blank'></a></li>
           <li><a href="https://woutube.com/userInsuredDogOwners" class='fa fa-youtube-play' target='_blank'></a></li>
