blog looks good for a place holder

--- a/app/blog.html
+++ b/app/blog.html
@@ -53,6 +53,96 @@
     <div id="left"></div>
     <div id="right"></div>
 
+    <section id='blog'>
+      <section id='80917'>
+        <date>AUG 09, 2017</date>
+        <h3>Finding the Right Dog Walker: Suiting Your Dog's Needs</h3>
+        <img src="images/one.jpg" alt="">
+        <p>
+          As a proud pet parent, you know your dog better than anyone else. So, when it comes to finding the right walker, it's up to you to pinpoint exactly the type of experience they need. From lounging around to going on group walks, there are so many different types of activities your walker can do with your pet. Depending on the type of exercise and behavior needs of your dog, you'll need to find someone to accommodate them. In our <span class='links'>last article</span>, we covered the basics of finding a dog walker, now we're going to dive deeper into finding a professional whose lifestyle matches your dogs. As always, protect your dog with a <span class='links'> Canine Liability Insurance</span> policy to give yourself some peace of mind while he is in the control of someone else.
+        </p>
+        <h4>Check Social Media.</h4>
+        <p>
+          As cliché as it might sound, a lot of dog walkers and companies feature their pets online. Look at ther Instagram or Facebook accounts to see what type of activities they do with the pets they walk. This way, you can see what other dogs they walk, where they go on their jaunts, and if they have experience walking puppies versus senior dogs.
+        </p>
+        <h4>Ask the Important Questions</h4>
+        <p>
+          If your dog isn't as friendly with other as you might like, it's important to have a walker who will dedicate there time solely to your dog. Likewise, if he has boundless energy and wants to run with a pack, ask them if they are active enought to keep up. According to <span class='links'>Barkpost</span>, as the following questions:
+        </p>
+        <ul>
+          <li>Where will you be wlaking my dog?</li>
+          <li>How will you be traveling there?</li>
+          <li>How many dogs at a time do you walk?</li>
+          <li>How long will the actual walk be?</li>
+          <li>Dog you have a GPS tracker?</li>
+        </ul>
+        <h5>About FIDO</h5>
+        <p>
+          There are many reasons a dog may bite, and it's not always 100% preventable. In addition to financially protecting dog owners from dog bite claims, our <span class='links'>Canine Liability Policy</span> also covers other injuries to people, including scratches and fall injuries caused by dogs and injuries to other animals. Please contact us today for more information at (407) 865-7477, ext 101
+        </p>
+      </section>
+
+      <section id='80217'>
+        <date>AUG 02, 2017</date>
+        <h3>Need to Hire a Dog Walker? Read This.</h3>
+        <img src="images/two.jpg" alt="">
+        <p>
+          Owning a dog comes with an inherent active lifestyle that sometimes means getting up at the crack of dawn to run them or taking them on long jaunts after work. However, life is unpredictable and sometimes walking them each day isn't feasible. This is where professional dog walkers come in handy - they can exercise your pup when you're unable to. However, as dogs are as unique as their owners, vetting your options and finding the best walker will benefit both you and your pet. in addition to reducing your liability and protecting your dog with a <span class='links'>Canine Liability Insurace</span> policy, consider the following advice for hiring a professional dog walker.
+        </p>
+        <h4>Choosing the Best type of Walker.</h4>
+        <p>
+          Whether your dog lowes long runs, exploring nature trails, or just likes to sniff the neighborhood close to home, it's important you find the right walker for his or her needs. Find someone who can accommodate your dog and the types of exercise he or she prefers.
+        </p>
+        <h4>Setting your dog up for Success.</h4>
+        <p>
+          Every dog has their quirks - let your wlaker know upfront. Whether they're afraid of skateboads, are ractive to dogs or children, or just like to take their sweet time and sniff every last inch, let your walker know about your dog's triggers and personality.
+        </p>
+        <h4>How much will it cost?</h4>
+        <p>
+          The average cost of a professional dog walker varies based on the service and your location. A good way to find out the going rate in your neighborhood is to hit the dog park and start socializing. Dog park moms and dads are usually happy to chat with fellow dog owner and offer advice and contacts. You should expect that dog walkers who specialize in additional services like running, trail walks/hikes/runs, and feeding will cost a bit more, says <span class='links'>Dogster</span>.
+        </p>
+        <p>
+          Online services such as Rover and Wag! can put you in touch with seasoned dog caretakers in your area.
+        </p>
+        <h4>Trus your instincts.</h4>
+        <p>
+          Once you've set up a meet and greet with your potential walker, see how your dog responds. If he or she doesn't seem to be bonding with the wlaker, it's best to interview someone else. Remembet, this person is going to be responsible for your pet in your absenece, so choose someone who you both can trust.
+        </p>
+        <h5>About FIDO</h5>
+        <p>
+          There are many reasons a dog may bite, and it's not always 100% preventable. In addition to financially protecting dog owners from dog bite claims, our <span class='links'>Canine Liability Policy</span> also covers other injuries to people, including scratches and fall injuries caused by dogs and injuries to other animals. Please contact us today for more information at (407) 865-7477, ext 101
+        </p>
+      </section>
+
+      <section id='72117'>
+        <date>JULY 21, 2017</date>
+        <h3>The Consequences of Having a Fake Service Dog</h3>
+        <img src="images/three.jpg" alt="">
+        <p>
+          In this series of posts, we have covered the topic of service animals. Service dogs, by their very nature, are trained to be the eyes, ears, and even limbs of their handlers who require their support. However, without the proper training, taking a dog out into stressful environments with new people, dogs and smells can be overwhelming, leading to aggressive and insecure behavior. We've already covered the <span class='links'>basic dangers</span>, what <span class='links'>actually constitutes a service animal</span>, and gone into detail about the <span class='links'>required training service animals will endure</span>. In this post, we'll go over some of the additional consequences that are associated with faking a service animal. Whether your dog is a pet or service animal, protect him with a <span class='links'>Canine Liability</span> policy.
+        </p>
+        <h4>The handler can become injured.</h4>
+        <p>
+          If a handler has a legitimate sercice dog who is distracted by an unruly pet, the person runs the risk of facing an injury. For example, the dog might miss an important cue to alert a seizure, causing the handler to fall without warning.
+        </p>
+        <h4>The dog can become injured</h4>
+        <p>
+          An unruly dog can easily react negatively in stressful environments. Service dogs are trained to deal with large crowds and distractions, whereas pets are not. In the worst case scenario, a dog will act aggressively towards a service animal. Often, service dogs look to their handlers for support and reassurance, and if the person is unable to physically stop the aggression, the service animal could become severely injured.
+        </p>
+        <p>
+          According to <span class='links'>CBS News</span>, there is a big difference in the behavior of real service dogs and impostors inside businesses. A true service dog becomes nearly invisible, while ordinary pets might bark, urinate, sniff, scratch and eat off the floor.
+        </p>
+        <h4>Businesses can suffer.</h4>
+        <p>
+          Reputations are on the line when business owners have to differentiate between legitimate and fake service dogs. An untrained pet can urinate of defecate on expensive materials, compromise safety, and cause unsanitary surfaces in a business.
+        </p>
+        <h5>About FIDO</h5>
+        <p>
+          There are many reasons a dog may bite, and it's not always 100% preventable. In addition to financially protecting dog owners from dog bite claims, our <span class='links'>Canine Liability Policy</span> also covers other injuries to people, including scratches and fall injuries caused by dogs and injuries to other animals. Please contact us today for more information at (407) 865-7477, ext 101
+        </p>
+      </section>
+    </section>
+
     <footer>
       <div class="container">
         <h5>QUICK CONTACT</h5>
